<resources>
    <string name="app_name">eCommerce</string>
    <string name="Item_Inicio">Inicio</string>
    <string name="Item_Chats">Chats</string>
    <string name="Item_vender">vender</string>
    <string name="Item_Mis_Anuncios">Mis anuncios</string>
    <string name="Item_Cuenta">Cuenta</string>
    <string name="TituloRL">Ecommerce</string>

    <string name="Ingresar_email">Ingresar con email</string>
    <string name="Ingresar_google">Ingresar con google</string>

    <string name="Txt_login">Login de usuario</string>
    <string name="Et_email">Email</string>
    <string name="Et_password">Password</string>
    <string name="Btn_ingresar">Ingresar</string>
    <string name="Txt_no_cuenta">¿No tienes una cuenta?</string>
    <string name="Txt_registrarme">REGISTRARME</string>

    <string name="Txt_registro">Registro de usuario</string>
    <string name="Et_r_password">Repetir contraseña</string>
    <string name="Btn_registrar">Registrar</string>

    <!--Perfil del usuario-->
    <string name="Txt_perfil">Perfil de usuario</string>
    <string name="Txt_informacion">Informacion:</string>
    <string name="Txt_nombres">Nombres:</string>
    <string name="Tv_nombres">Nombres Completos</string>
    <string name="Txt_email">Email: </string>
    <string name="Tv_email">email@dominio.com</string>
    <string name="Txt_nacimiento">Fecha de nac:</string>
    <string name="Tv_nacimiento">dd/mm/aaaa</string>
    <string name="Txt_miembro">Miembro desde:</string>
    <string name="Tv_miembro">dd/mm/aaaa</string>
    <string name="Txt_telefono">Telefono:</string>
    <string name="Tv_telefono">999999999</string>
    <string name="Txt_estado_cuenta">Estado de cuenta:</string>
    <string name="Tv_estado_cuenta">No verificado</string>

    <string name="TxtOpciones">Opciones</string>
    <string name="Btn_editar_perfil">Editar perfil</string>
    <string name="Btn_cerrar_sesion">Cerrar Sesión</string>

    <!--    Editar perfil -->
    <string name="Txt_editar_p">Editar perfil</string>
    <string name="Et_nombres">Nombres completos</string>
    <string name="Et_f_nac">Fecha de nac.</string>
    <string name="Cod_tef">+00</string>
    <string name="Et_telefono">Telefono</string>
    <string name="Btn_actualizar">Actualizar</string>

    <!--    crear anuncios-->
    <string name="Et_marca">Nombre de la marca</string>
    <string name="Categoria">Categoria</string>
    <string name="Condicion">Condicion</string>
    <string name="Locacion">Locación</string>
    <string name="Et_precio">Precio</string>
    <string name="Et_titulo">Titulo</string>
    <string name="Et_descripcion">Descripcion</string>
    <string name="Btn_crear_anuncio">Crear anuncio</string>

    <!--    Mapas-->
    <string name="Txt_selec_ubicacion">Seleccione ubicacion</string>
    <string name="Btn_listo">Listo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_crear_anuncio">CrearAnuncio</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor

    </string>

</resources>