<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".Fragments.FragmentCuenta">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Txt_perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/Txt_perfil"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/Iv_perfil"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/Txt_perfil"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_perfil" />

        <TextView
            android:id="@+id/Txt_informacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Iv_perfil"
            android:layout_marginTop="10dp"
            android:text="@string/Txt_informacion"
            android:textStyle="bold" />


        <!--nombres-->
        <TextView
            android:id="@+id/Txt_nombres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Txt_informacion"
            android:layout_marginTop="15dp"
            android:text="@string/Txt_nombres" />

        <TextView
            android:id="@+id/Tv_nombres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Txt_informacion"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:text="@string/Tv_nombres" />

        <!--Email-->

        <TextView
            android:id="@+id/Txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Txt_nombres"
            android:layout_marginTop="15dp"
            android:text="@string/Txt_email" />

        <TextView
            android:id="@+id/Tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Txt_nombres"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:text="@string/Tv_email" />

        <!--fecha de nacimiento-->
        <TextView
            android:id="@+id/Txt_nacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Txt_email"
            android:layout_marginTop="15dp"
            android:text="@string/Txt_nacimiento" />

        <TextView
            android:id="@+id/Tv_nacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Txt_email"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:text="@string/Tv_nacimiento" />

        <!--Miembros desde-->
        <TextView
            android:id="@+id/Txt_miembro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Txt_nacimiento"
            android:layout_marginTop="15dp"
            android:text="@string/Txt_miembro" />

        <TextView
            android:id="@+id/Tv_miembro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Txt_nacimiento"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:text="@string/Tv_miembro" />

        <!--telefono-->
        <TextView
            android:id="@+id/Txt_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Txt_miembro"
            android:layout_marginTop="15dp"
            android:text="@string/Txt_telefono" />

        <TextView
            android:id="@+id/Tv_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Txt_miembro"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:text="@string/Tv_telefono" />

        <!--estado de cuenta-->
        <TextView
            android:id="@+id/Txt_estado_cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Txt_telefono"
            android:layout_marginTop="15dp"
            android:text="@string/Txt_estado_cuenta" />

        <TextView
            android:id="@+id/Tv_estado_cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Txt_telefono"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:text="@string/Tv_estado_cuenta" />


        <TextView
            android:id="@+id/TxtOpciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Txt_estado_cuenta"
            android:layout_marginTop="15dp"
            android:text="@string/TxtOpciones"
            android:textSize="17sp"
            android:textStyle="bold" />

        <!--editar perfil-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_editar_perfil"
            android:layout_width="200dp"
            android:layout_height="@dimen/m_button_height"
            android:layout_centerInParent="true"
            android:textColor="@color/azul"
            app:iconTint="@color/azul"
            app:icon="@drawable/ic_edit"
            android:backgroundTint="@color/amarillo"
            android:layout_below="@+id/TxtOpciones"
            android:text="@string/Btn_editar_perfil"
            android:textAllCaps="true" />

        <!--cerrar sesion-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_cerrar_sesion"
            android:layout_width="200dp"
            app:icon="@drawable/ic_exit"
            android:layout_height="@dimen/m_button_height"
            android:layout_centerInParent="true"
            android:text="@string/Btn_cerrar_sesion"
            android:textAllCaps="true"
            android:backgroundTint="@color/azul"
            android:layout_below="@+id/Btn_editar_perfil"/>

    </RelativeLayout>


</ScrollView>