<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".EditarPerfil">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/Txt_editar_p"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/Txt_editar_p"
        android:textSize="20sp"
        android:textStyle="bold"

        />

    <!--   Imagen de perfil -->
    <RelativeLayout
        android:id="@+id/perfilRL"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/Txt_editar_p"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/img_perfil"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_perfil" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/FABCambiarImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_selec_imagen"
            app:fabSize="mini" />


    </RelativeLayout>

    <!--Nombres-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TILNombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/perfilRL"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp">

        <EditText
            android:id="@+id/Et_nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Et_nombres"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    Fecha de Nacimiento-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_Nac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TILNombres"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp">

        <EditText
            android:id="@+id/Et_f_nac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Et_f_nac" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    Cod + Telefono-->
    <RelativeLayout
        android:id="@+id/RL_Cod_Tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TIL_Nac"
        android:layout_marginTop="10dp">


        <com.hbb20.CountryCodePicker
            android:id="@+id/selectorCod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:ccp_autoDetectCountry="true"
            app:ccp_rememberLastSelection="true" />

        <!--   NUMERO DE TELEFONO-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/selectorCod"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <EditText
                android:id="@+id/Et_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Et_telefono"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Btn_actualizar"
        android:layout_width="200dp"
        android:layout_height="@dimen/m_button_height"
        android:layout_below="@id/RL_Cod_Tel"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        app:icon="@drawable/ic_edit"
        android:text="@string/Btn_actualizar"
        android:textAllCaps="true" />


</RelativeLayout>