<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Anuncios.CrearAnuncio">

    <RelativeLayout
        android:id="@+id/Rl_Imagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/agregarImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:src="@drawable/agregar_img" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Rl_Imagen"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RV_Imagenes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4"
                tools:listitem="@layout/item_imagenes_seleccionadas" />

<!--            marca del producto-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_Marca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/RV_Imagenes"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp" >

                <EditText
                    android:id="@+id/Et_marca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Et_marca"
                    android:inputType="textPersonName|textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--  Categoria-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_Categoria"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TIL_Marca"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp" >

                <AutoCompleteTextView
                    android:id="@+id/Categoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Categoria"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--  Condicion-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_Condicion"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TIL_Categoria"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp" >

                <AutoCompleteTextView
                    android:id="@+id/Condicion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Condicion"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--  Locacion-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_Locacion"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TIL_Condicion"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp" >

                <AutoCompleteTextView
                    android:id="@+id/Locacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Locacion"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>


            <!--  Precio-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_Precio"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TIL_Locacion"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp" >

                <AutoCompleteTextView
                    android:id="@+id/Et_precio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Et_precio"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--  Titulo-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_Titulo"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TIL_Precio"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp" >

                <AutoCompleteTextView
                    android:id="@+id/Et_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Et_titulo"
                    android:inputType="textPersonName|textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--  Descripcion-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_Descripcion"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TIL_Titulo"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp" >

                <AutoCompleteTextView
                    android:id="@+id/Et_descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Et_descripcion"
                    android:minHeight="100dp"
                    android:gravity="top|start"
                    android:inputType="text|textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>




        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Btn_crear_anuncio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textAllCaps="true"
        android:layout_margin="10dp"
        app:cornerRadius="8dp"
        android:text="@string/Btn_crear_anuncio"/>

</RelativeLayout>